// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Information component component matches snapshot with type information 1`] = `
<styled.div
  activeBg="var(--information)"
>
  <div
    style={
      Object {
        "background": "var(--information)",
        "display": "flex",
      }
    }
  >
    <styled.div>
      <InformationIcon />
    </styled.div>
  </div>
  <styled.div>
    <styled.div>
      Information
    </styled.div>
    Lorem Ipsum
  </styled.div>
</styled.div>
`;

exports[`Information component component matches snapshot with type note 1`] = `
<styled.div
  activeBg="var(--note)"
>
  <div
    style={
      Object {
        "background": "var(--note)",
        "display": "flex",
      }
    }
  >
    <styled.div>
      <NoteIcon />
    </styled.div>
  </div>
  <styled.div>
    <styled.div>
      Note
    </styled.div>
    Lorem Ipsum
  </styled.div>
</styled.div>
`;

exports[`Information component component matches snapshot with type tip 1`] = `
<styled.div
  activeBg="var(--tip)"
>
  <div
    style={
      Object {
        "background": "var(--tip)",
        "display": "flex",
      }
    }
  >
    <styled.div>
      <TipIcon />
    </styled.div>
  </div>
  <styled.div>
    <styled.div>
      Tip
    </styled.div>
    Lorem Ipsum
  </styled.div>
</styled.div>
`;

exports[`Information component component matches snapshot with type warning 1`] = `
<styled.div
  activeBg="var(--warning)"
>
  <div
    style={
      Object {
        "background": "var(--warning)",
        "display": "flex",
      }
    }
  >
    <styled.div>
      <WarningIcon />
    </styled.div>
  </div>
  <styled.div>
    <styled.div>
      Warning
    </styled.div>
    Lorem Ipsum
  </styled.div>
</styled.div>
`;
